--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,34 @@
-
 body {
     background-color: #012f3d;
     color: #0dd168;
+}
+
+nav {
+    background-color: #009ac9;
+    margin-bottom: 20px;
+}
+
+.nav-link-custom {
+    color: #11122b;
+    font-weight: bold;
+}
+
+.nav-link-custom:hover {
+    color: #262bcc;
+    font-weight: bolder;
+    font-size: 1.10em;
+}
+
+.nav-active-custom {
+    color : #11122b;
+    font-weight: bolder;
+    font-size: 1.25em;
+}
+
+.nav-active-custom:hover {
+    color : #262bcc;
+    font-weight: bolder;
+    font-size: 1.5em;
 }
 
 header h1 {
@@ -26,37 +53,7 @@ header h1 {
 
 footer {
     background-color: #009ac9;
-    margin-top: 33% ;
 
 }
 
-@media screen and (max-width: 600px) {
-    body {
-        font-size: 11px;
-    }
 
-    .nav-pills.card-header-tabs {
-        flex-direction: column;
-    }
-}
-
-@media print {
-    body {
-        font-size: 10pt;
-    }
-    
-}
-
-@media screen and (max-width: 550px) {
-    body {
-        font-size: 12px;
-    }
-    
-}
-
-@media screen and (max-width: 769px) {
-    body {
-        font-size: 14px;
-    }
-
-}
