--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,8 +3,12 @@ body {
     color: #0dd168;
 }
 
-.text-color {
+.regular-text-color {
     color: #0dd168;
+}
+
+.heading-text-color {
+    color: #03b395;
 }
 
 nav {
@@ -57,7 +61,11 @@ header h1 {
 
 footer {
     background-color: #009ac9;
+}
 
+.footer-text-color {
+    color: black;
+    font-weight: bolder;
 }
 
 table td:hover {
