--- a/static/css/style-tab.css
+++ b/static/css/style-tab.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 600px) and (max-width: 795px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
     body {
         font-size: 11px;
     }
@@ -9,5 +9,9 @@
 
     .phone-link {
         display: none;
+    }
+
+    .phone-display {
+        display: block;
     }
 }
